--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,15 @@
+spring.config.import=classpath:application-secrets.properties
+
+# --- DataSource ---
+spring.datasource.url=jdbc:mariadb://localhost:3306/beers
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# --- Hibernate ---
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+
 server.error.include-stacktrace=never
-database.url=jdbc:mariadb://localhost/beers
-database.username=root
-database.password=root
+
