--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.config.import=classpath:application-secrets.properties
 
-# --- DataSource ---
-spring.datasource.url=jdbc:mariadb://localhost:3306/beers
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-# --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-
+## --- DataSource ---
+#spring.datasource.url=jdbc:mariadb://localhost:3306/beers
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+## --- Hibernate ---
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 server.error.include-stacktrace=never
+server.error.include-message=always
+server.error.include-exception=true
 
