--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ server.error.include-stacktrace=never
 server.error.include-message=always
 server.error.include-exception=true
 
+
+spring.thymeleaf.cache=false
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
