--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ server.error.include-exception=true
 spring.thymeleaf.cache=false
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+
+server.error.whitelabel.enabled=false
